# spot_mini

./: README.md  config_sample.yaml  main.py  pyproject.toml
examples/: README.rst  hello_spot.py
spot/: command.py  config.py  main.py  robot.py  vision.py
tests/: test_spot.py
